src/Commits.css
.commit-content {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background-color: black;
	padding-bottom: 100px;
}

.commit-list {
	display: grid;
	justify-items: center;
	align-content: space-evenly;
	align-items: center;
	gap: 50px;
	column-gap: 300px;
	grid-template-columns: repeat(2, auto);
	grid-template-rows: auto;
	animation: move-right 1s ease-in;
}

.message {
	width: 80%;
	font-size: 25px;
	text-align: center;
	font-family: "Fjalla One", sans-serif;
	text-transform: capitalize;
	color: white;
}

.secondary-commit {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	text-align: left;
}

.commit-info {
	color: white;
	font-family: "Montserrat", sans-serif;
	text-transform: capitalize;
}

.commit-item {
	display: flex;
	flex-direction: column;
	align-items: center;
	width: 300px;
	text-align: left;
}

.commit-items {
	width: 520px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	border: 1px solid white;
	border-radius: 10px;
}

.back-button {
	margin-top: 50px;
}

.back-button:hover {
	box-shadow: none;
	text-shadow: 7px 14px 15px rgba(91, 89, 87, 0.6);
}

.back-text {
	font-size: 70px;
	color: white;
}

